--- a/Research Gate Web Scraper.ipynb
+++ b/Research Gate Web Scraper.ipynb
@@ -4,42 +4,63 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/frostburn/anaconda3/lib/python3.7/site-packages/fuzzywuzzy/fuzz.py:11: UserWarning: Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning\n",
+      "  warnings.warn('Using slow pure-python SequenceMatcher. Install python-Levenshtein to remove this warning')\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "import os\n",
     "import time\n",
-    "from random import randint"
+    "from random import randint\n",
+    "from fuzzywuzzy import process"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "download.default_directory=C:\\Users\\marti\\Desktop\\Webscraping\\Downloads\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "print(\"download.default_directory=\" + os.getcwd() + \"\\Downloads\")"
+    "def get_matches(query,choices,limit=3):\n",
+    "    results = process.extract(query,choices,limit=limit)\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "download.default_directory=/home/frostburn/Desktop/Webscraping/Downloads\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"download.default_directory=\" + os.getcwd() + \"/Downloads\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "options = webdriver.ChromeOptions()\n",
     "prefs = {\n",
-    "    \"download.default_directory\": os.getcwd() + \"\\Downloads\",\n",
+    "    \"download.default_directory\": os.getcwd() + \"/Downloads\",\n",
     "    \"download.prompt_for_download\": False,\n",
     "    \"download.directory_upgrade\": True\n",
     "}\n",
@@ -48,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,13 +100,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "def research_gate_scraper(record):\n",
+    "def research_gate_scraper(record,faculty):\n",
     "\n",
     "    bio = \"\"\n",
     "    dept = \"\"\n",
@@ -93,38 +114,36 @@
     "    academic = \"\"\n",
     "    research = \"\"\n",
     "    orcid = \"\"\n",
-    "    scopus = \"\"\n",
-    "\n",
-    "    research_gate = \"https://www.researchgate.net/search/authors?q\"\n",
-    "\n",
-    "    #Instatiate the webdriver and set to implicitly wait for page objects to load\n",
-    "    driver = webdriver.Chrome()\n",
-    "    driver.implicitly_wait(4) # seconds loading implicitly\n",
-    "\n",
-    "    #Set driver to go to start_page and search a given name\n",
-    "    driver.get(research_gate)\n",
+    "    scopus = \"\" \n",
+    "    \n",
+    "    time.sleep(randint(5,10))\n",
     "    search_bar = driver.find_element_by_tag_name('input')\n",
-    "    search_bar.send_keys(\"\\\"\" + record.faculty + \"\\\"\" + \" CSUN\")\n",
+    "    search_bar.send_keys(\"\\\"\" + record.faculty.strip() + \"\\\"\" + \" CSUN\")\n",
     "    search_bar.send_keys(Keys.ENTER)\n",
     "    \n",
     "    results = False\n",
-    "    if not driver.find_elements_by_xpath('//*[@id=\"rgw4_5ce5b6067a7fe\"]/div/div[2]/div[2]/div/div[2]/div/div[1]/div/div/div/div'):\n",
+    "               \n",
+    "    if not driver.find_elements_by_xpath('//*[@class=\"nova-o-stack__item\"]/div'):\n",
     "        results = True\n",
-    "        \n",
-    "    if results:\n",
-    "        name = driver.find_element_by_xpath('//div[@class=\"nova-o-stack__item\"]//div[@class=\"nova-v-person-item__stack-item\"]//a')\n",
-    "        if record.faculty == name.text:\n",
+    "    else:\n",
+    "        search_bar = driver.find_element_by_tag_name('input')\n",
+    "        search_bar.clear()\n",
+    "        search_bar.send_keys(\"\\\"\" + record.faculty.strip() + \"\\\"\" + \" Northridge\")\n",
+    "        search_bar.send_keys(Keys.ENTER)\n",
+    "        if not driver.find_elements_by_xpath('//*[@class=\"nova-o-stack__item\"]/div'):\n",
     "            results = True\n",
     "        else:\n",
-    "            search_bar = driver.find_element_by_tag_name('input')\n",
-    "            search_bar.clear()\n",
-    "            search_bar.send_keys(\"\\\"\" + record.faculty + \"\\\"\" + \" Northridge\")\n",
-    "            search_bar.send_keys(Keys.ENTER)\n",
-    "            name = driver.find_element_by_xpath('//div[@class=\"nova-o-stack__item\"]//div[@class=\"nova-v-person-item__stack-item\"]//a')\n",
-    "            if record.faculty == name.text:\n",
-    "                results = True\n",
-    "            else:\n",
-    "                results = False\n",
+    "            driver.close()\n",
+    "        \n",
+    "    if results:\n",
+    "        \n",
+    "        name = driver.find_element_by_xpath('//div[@class=\"nova-o-stack__item\"]//div[@class=\"nova-v-person-item__stack-item\"]//a')\n",
+    "        matches = get_matches(name.text,faculty)\n",
+    "        \n",
+    "        if matches[0][1] >= 0.85 :\n",
+    "            results = True\n",
+    "        else:\n",
+    "            results = False\n",
     "    \n",
     "    if results:\n",
     "        \n",
@@ -173,19 +192,19 @@
     "        while \"Full-text available\" in paper_types:\n",
     "            paper_types.remove(\"Full-text available\")\n",
     "            \n",
-    "        profile_writer = open(\"research_gate_profiles.txt\", \"a\")\n",
+    "        profile = open(\"research_gate_profiles.txt\", \"a\")\n",
     "        \n",
-    "        profile_writer.write(record.faculty.strip() + \"|\" + record.college + \"|\")\n",
-    "        profile_writer.write(record.department + \"|\" + bio + \"|\" + personal + \"|\")\n",
-    "        profile_writer.write(academic + \"|\" + research + \"|\")\n",
-    "        profile_writer.write(orcid + \"|\" + scopus + \"\\n\")\n",
+    "        profile.write(record.faculty.strip() + \"|\" + record.college + \"|\")\n",
+    "        profile.write(record.department + \"|\" + bio + \"|\" + personal + \"|\")\n",
+    "        profile.write(academic + \"|\" + research + \"|\")\n",
+    "        profile.write(orcid + \"|\" + scopus + \"\\n\")\n",
     "        \n",
-    "        profile_writer.close()\n",
-    "        driver.close()\n",
+    "        profile.close()\n",
+    "        #driver.close()\n",
     "\n",
     "        i = 0\n",
     "        for url in urls:\n",
-    "\n",
+    "            \n",
     "            citation_text = \"\"\n",
     "            title = \"\"\n",
     "            abstract = \"\"\n",
@@ -205,10 +224,10 @@
     "            isbn = \"\"\n",
     "            handle = \"\"\n",
     "\n",
-    "            driver = webdriver.Chrome(options=options)\n",
-    "            driver.implicitly_wait(4) # seconds loading implicitly\n",
+    "            #driver = webdriver.Chrome(options=options)\n",
+    "            #driver.implicitly_wait(4) # seconds loading implicitly\n",
     "\n",
-    "            #time.sleep(randint(5,10))\n",
+    "            time.sleep(randint(5,10))\n",
     "\n",
     "            driver.get(url)\n",
     "\n",
@@ -256,21 +275,21 @@
     "\n",
     "            time.sleep(3)\n",
     "\n",
-    "            driver.close()\n",
+    "            #driver.close()\n",
     "\n",
     "\n",
     "            # now that file is downloaded, need to open the file\n",
     "\n",
     "            # here I grab the file name; the trick to this is making sure that its the only file in downloads\n",
-    "            citation_file = os.listdir(os.getcwd() + \"\\Downloads\")[0]\n",
+    "            citation_file = os.listdir(os.getcwd() + \"/Downloads\")[0]\n",
     "\n",
     "            # grab the citation\n",
     "            # i can probably get the name of the journal from the citation if thats something thats all over\n",
-    "            f = open(\"Downloads\\\\\"+citation_file, \"r\")\n",
+    "            f = open(\"Downloads/\"+citation_file, \"r\")\n",
     "            citation_text = f.read()\n",
     "            f.close()\n",
     "            # delete it\n",
-    "            os.remove(\"Downloads\\\\\"+citation_file)\n",
+    "            os.remove(\"Downloads/\"+citation_file)\n",
     "\n",
     "            citation_text\n",
     "\n",
@@ -281,19 +300,14 @@
     "                parts.append(piece.strip())\n",
     "            #print(parts[3],\",\",parts[4])\n",
     "\n",
-    "            citations_file = open(\"research_gate_citations.txt\", \"a\")\n",
+    "            citations = open(\"research_gate_citations.txt\", \"a\")\n",
     "\n",
-    "            citations_file.write(record.faculty.strip() + \"|\" + citation_text + \"|\" + titles[i] + \"|\" + paper_types[i] + \"|\")\n",
-    "            citations_file.write(abstract + \"|\" + book_title + \"|\" + journal_title + \"|\" + date + \"|\")\n",
-    "            citations_file.write(collabs + \"|\" + publisher + \"|\" + edition + \"|\" + series + \"|\")\n",
-    "            citations_file.write(volume + \"|\" + issue + \"|\" + chapter + \"|\" + pages + \"|\")\n",
-    "            citations_file.write(doi + \"|\" + issn + \"|\" + isbn + \"|\" + handle + \"|\" + url + \"\\n\")\n",
-    "            i+=1\n",
-    "            \n",
-    "        else:\n",
-    "            no_results = open(\"research_gate_no_results.csv\", \"a\")\n",
-    "            no_results.write(record.faculty.strip() + \",\" + record.college + \",\" + record.department + \",\" + record.url + \"\\n\")\n",
-    "        \n"
+    "            citation.write(record.faculty.strip() + \"|\" + citation_text + \"|\" + titles[i] + \"|\" + paper_types[i] + \"|\")\n",
+    "            citation.write(abstract + \"|\" + book_title + \"|\" + journal_title + \"|\" + date + \"|\")\n",
+    "            citation.write(collabs + \"|\" + publisher + \"|\" + edition + \"|\" + series + \"|\")\n",
+    "            citation.write(volume + \"|\" + issue + \"|\" + chapter + \"|\" + pages + \"|\")\n",
+    "            citation.write(doi + \"|\" + issn + \"|\" + isbn + \"|\" + handle + \"|\" + url + \"\\n\")\n",
+    "            i+=1\n"
    ]
   },
   {
@@ -306,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -406,52 +420,95 @@
        "4   https://www.csun.edu/humanities/gender-womens...  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "view_content = pd.read_csv(\"view_content.csv\")\n",
+    "faculty = list(view_content.faculty)\n",
     "print(view_content.columns)\n",
     "view_content.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21\n"
-     ]
+     "data": {
+      "text/plain": [
+       "faculty                                         Chris Bolsmann \n",
+       "college                              Health & Human Development\n",
+       "department                            Department of Kinesiology\n",
+       "url            https://www.csun.edu/health-human-development...\n",
+       "Name: 13, dtype: object"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "research_gate_scraper(view_content.iloc[1])"
+    "view_content.iloc[13]\n",
+    "#print(list(range(4,10)))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "driver = webdriver.Chrome(options=options)\n",
+    "driver.implicitly_wait(10)\n",
+    "try:\n",
+    "    research_gate = \"https://www.researchgate.net/search/authors?q\"\n",
+    "    driver.get(research_gate)\n",
+    "    research_gate_scraper(view_content.iloc[13],faculty)\n",
+    "finally:\n",
+    "    driver.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21\n"
+     "ename": "WebDriverException",
+     "evalue": "Message: invalid session id\n  (Driver info: chromedriver=73.0.3683.68 (47787ec04b6e38e22703e856e101e840b65afe72),platform=Linux 4.15.0-50-generic x86_64)\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mWebDriverException\u001b[0m                        Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-10-04b83f31df83>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 13\u001b[0;31m     \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mclose\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    686\u001b[0m             \u001b[0mdriver\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    687\u001b[0m         \"\"\"\n\u001b[0;32m--> 688\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mCommand\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mCLOSE\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    689\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    690\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mquit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/selenium/webdriver/remote/webdriver.py\u001b[0m in \u001b[0;36mexecute\u001b[0;34m(self, driver_command, params)\u001b[0m\n\u001b[1;32m    319\u001b[0m         \u001b[0mresponse\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcommand_executor\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexecute\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdriver_command\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    320\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mresponse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 321\u001b[0;31m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0merror_handler\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheck_response\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mresponse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    322\u001b[0m             response['value'] = self._unwrap_value(\n\u001b[1;32m    323\u001b[0m                 response.get('value', None))\n",
+      "\u001b[0;32m~/anaconda3/lib/python3.7/site-packages/selenium/webdriver/remote/errorhandler.py\u001b[0m in \u001b[0;36mcheck_response\u001b[0;34m(self, response)\u001b[0m\n\u001b[1;32m    240\u001b[0m                 \u001b[0malert_text\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mvalue\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'alert'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'text'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    241\u001b[0m             \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0malert_text\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 242\u001b[0;31m         \u001b[0;32mraise\u001b[0m \u001b[0mexception_class\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mscreen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mstacktrace\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    243\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    244\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_value_or_default\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mobj\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdefault\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mWebDriverException\u001b[0m: Message: invalid session id\n  (Driver info: chromedriver=73.0.3683.68 (47787ec04b6e38e22703e856e101e840b65afe72),platform=Linux 4.15.0-50-generic x86_64)\n"
      ]
     }
    ],
    "source": [
-    "for i in range(view_content.shape[0]):\n",
-    "    research_gate_scraper(view_content.iloc[i])"
+    "driver = webdriver.Chrome(options=options)\n",
+    "driver.implicitly_wait(4)\n",
+    "try:\n",
+    "    research_gate = \"https://www.researchgate.net/search/authors?q\"\n",
+    "    driver.get(research_gate)\n",
+    "    for i in range(10):\n",
+    "        research_gate_scraper(view_content.iloc[i],faculty)\n",
+    "except:\n",
+    "    pass\n",
+    "else:\n",
+    "    pass\n",
+    "finally:\n",
+    "    driver.close()"
    ]
   },
   {
@@ -562,7 +619,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
